--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-$baseurl: '{{ site.baseurl }}/images';
+$baseurl: '{{ site.github.url }}/images';
 
 @import 'libs/vars';
 @import 'libs/functions';
