--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,16 +7,8 @@
       <li class="special">
         <a href="#menu" class="menuToggle"><span>Menu</span></a>
         <div id="menu">
-          <ul>
-            <li><a href="{{ "/index.html" | prepend: site.baseurl }}">Home</a></li>
-            {% for my_page in site.pages %}
-            {% if my_page.title %}
-            <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
-            {% endif %}
-            {% endfor %}
-            <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}"
-                   class="icon fa-feed"> RSS Feed</a></li>
-          </ul>
+          {% include nav.html nav=site.data.menu %}
+
         </div>
       </li>
     </ul>
