--- a/css/main.scss
+++ b/css/main.scss
@@ -74,7 +74,7 @@ $baseurl: '{{ site.github.url }}images';
 	a {
 		@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
 		border-bottom: dotted 1px;
-		color: inherit;
+		color: #5120b3;
 		text-decoration: none;
 
 		&:hover {
