--- a/css/main.scss
+++ b/css/main.scss
@@ -83,6 +83,18 @@ $baseurl: '{{ site.github.url }}images';
 		}
 	}
 
+	#background-video {
+		width: 100vw;
+		height: 100vh;
+		object-fit: cover;
+		position: fixed;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		z-index: -1;
+	  }
+
 	strong, b {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
@@ -1676,7 +1688,7 @@ $baseurl: '{{ site.github.url }}images';
 	#main {
 		> header {
 			@include padding(12em, 0);
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/css/images/banner.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))'));
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
