Update the website with new design and background image

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,9 @@ layout: default
 <article id="main">
 
   <header>
+    <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+      <source src="{{ site.github.url }}/images/AdobeStock_595247018.mov" type="video/mp4">
+  </video>
     <h2>{{ page.title }}</h2>
     <p>Web Developer and User Experience Designer in Virginia</p>
   </header>
