--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,8 @@
     {% else %}
     <li><a target="_blank" href="{{ socloc[1] }}" class="icon fa-{{ socloc[0] }}"
            ><span class="label">{{ socloc[0] }}</span></a></li>
+    <li><a target="_blank" href="{{ socloc[1] }}" class="icon fa-{{ socloc[0] }}"
+            ><span class="label">{{ socloc[0] }}</span></a></li>
     {% endif %}
     {% endif %}
     {% endfor %}
@@ -21,7 +23,7 @@
     {% endif %}
     {{ thisyear }}
     {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
-    <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+    <li>Design: <a href="" target="_blank">Equinox Multimedia</a></li>
     <li>Built with: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
   </ul>
 </footer>
