--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -37,21 +37,22 @@
 
 // Palette.
 	$palette: (
-		bg:					#2e3842,
-		fg:					#fff,
-		fg-bold:			#fff,
+		bg:					#000,
+		fg:					#000,
+		fg-bold:			#000,
 		fg-light:			rgba(255,255,255,0.5),
-		border:				#fff,
+		border:				#000,
 		border-bg:			rgba(144,144,144,0.25),
 		border2:			#fff,
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				rgba(50,43,84,0.6),
-			fg-bold:		#ffffff,
-			fg:				mix(#505393, #ffffff, 25%),
-			fg-light:		mix(#002a00, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
+			bg:				rgba(0,0,0,0.5),
+			button:			rgba(14,81,90,0.9),
+			fg-bold:		#fff,
+			fg:				mix(#505393, #000, 25%),
+			fg-light:		mix(#002a00, #000, 40%),
+			border:			rgba(0,0,0,1.0),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
 			border2-bg:		rgba(255,255,255,0.2)
@@ -59,19 +60,19 @@
 
 		accent2: (
 			bg:				#00ffcc,
-			fg-bold:		#ffffff,
-			fg:				mix(#00ffcc, #ffffff, 25%),
-			fg-light:		mix(#00ffcc, #ffffff, 40%),
+			fg-bold:		#000,
+			fg:				mix(#000, #000, 25%),
+			fg-light:		mix(#000, #000, 40%),
 			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
+			border-bg:		rgba(0,0,0,0.075),
 			border2:		rgba(0,0,0,0.25),
 			border2-bg:		rgba(255,255,255,0.2)
 		),
 
 		accent3: (
 			bg:				#00f0ff,
-			fg-bold:		#ffffff,
-			fg:				mix(#00f0ff, #ffffff, 25%),
+			fg-bold:		#000,
+			fg:				mix(#00f0ff, #000, 25%),
 			fg-light:		mix(#00f0ff, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
@@ -91,10 +92,10 @@
 		),
 
 		accent5: (
-			bg:				#505393,
-			fg-bold:		#ffffff,
-			fg:				mix(#505393, #ffffff, 25%),
-			fg-light:		mix(#505393, #ffffff, 40%),
+			bg:				rgba(0,0,0,0.025),
+			fg-bold:		#000,
+			fg:				mix(#505393, #000, 25%),
+			fg-light:		mix(#505393, #000, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -102,7 +103,7 @@
 		),
 
 		accent6: (
-			bg:				#ed4933,
+			bg:				rgba(28,91,96,0.6),
 			fg-bold:		#ffffff,
 			fg:				mix(#ed4933, #ffffff, 25%),
 			fg-light:		mix(#ed4933, #ffffff, 40%),
