--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -55,7 +55,8 @@
 			border:			rgba(0,0,0,1.0),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
+			border2-bg:		rgba(255,255,255,0.2),
+			menu:			rgba(7, 162, 170, 0)
 		),
 
 		accent2: (
